Fixed various issues throughout the site 🕊️
- Response to warning about layout shift scores when viewed on a PC (speculation as to where the cause is, but I hope it's improved!)
refs: https://web.dev/i18n/en/cls/

- When the site was first displayed, the "show sidebar if the area is somewhat large" behavior was not working properly, so this was corrected.
- Fixed keyboard button notation style.
- Removed a parameter processing branch that will probably never be changed on this site

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -5,9 +5,13 @@
   overflow-x: auto;
 }
 
-// For the style attribute, display: grid or block is added from the JS code.
-// (display: grid or block)
 .page {
+  // For the style attribute, display: grid or block is added from the JS code.
+  // (Specify an initial value to prevent layout shift on PC.)
+  @media only screen and (min-width: var.$mobile-max-width) {
+    display: grid;
+  }
+
   grid-template-columns: var.$sidebar-width 1fr;
   min-height: calc(100dvh - var.$menu-bar-height);
 }
@@ -264,7 +268,6 @@ a > .hljs {
 }
 
 .sidebar-scrollbox {
-  display: none; // Initially, it is hidden
   position: fixed;
   top: var.$menu-bar-height;
   bottom: 0;
